# codecolab

./: .gitignore  CMakeLists.txt  README.md  codecolab.pro  users.json
forms/: LoginDialog.ui  MainWindow.ui
include/: CodeEditorWidget.h  CollaborationClient.h  CollaborationManager.h  CollaborationServer.h  Document.h  DocumentStorage.h  EditOperation.h  LoginDialog.h  MainWindow.h  NetworkClient.h  NetworkServer.h  SyntaxHighlighter.h  User.h  UserStorage.h
resources/: CodeColab.qrc
resources/styles/: default.qss
src/: CodeEditorWidget.cpp  CollaborationClient.cpp  CollaborationManager.cpp  CollaborationServer.cpp  Document.cpp  EditOperation.cpp  LoginDialog.cpp  MainWindow.cpp  NetworkClient.cpp  NetworkServer.cpp  SyntaxHighlighter.cpp  User.cpp  UserStorage.cpp  main.cpp
